// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    23
     
    expenses
     tottaling 
    $2,311,122.35
  </p>
</div>
`;

exports[`should render ExpensesSummary correctly with one expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     tottaling 
    $2.35
  </p>
</div>
`;
